[gd_scene load_steps=51 format=3 uid="uid://r0xbwn3p4ltl"]

[ext_resource type="Script" path="res://oficina.gd" id="1_gv6nb"]
[ext_resource type="Texture2D" uid="uid://cnbfb7lrvwbvc" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/1-OFFICE.png" id="1_s34tl"]
[ext_resource type="Texture2D" uid="uid://c8oigk8xf5ibf" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/FAN/1.png" id="3_eos2g"]
[ext_resource type="Texture2D" uid="uid://cork3o88ir6ho" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/FAN/2.png" id="4_3cgyo"]
[ext_resource type="Texture2D" uid="uid://rvhd23y0uajf" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/FAN/3.png" id="5_tk1mf"]
[ext_resource type="Texture2D" uid="uid://ck6bp2ejkw0eb" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/1.png" id="6_3sg0f"]
[ext_resource type="Texture2D" uid="uid://bl2lar0gwwb26" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/2.png" id="7_4ta5s"]
[ext_resource type="Texture2D" uid="uid://b5brhhbm0tct2" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/3.png" id="8_qoxal"]
[ext_resource type="Texture2D" uid="uid://dx8ykfvrcv74y" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/4.png" id="9_yl5dj"]
[ext_resource type="Texture2D" uid="uid://bchysmwuvj1jd" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/5.png" id="10_mq7fp"]
[ext_resource type="Texture2D" uid="uid://c44pu0gp6s381" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/6.png" id="11_hbmah"]
[ext_resource type="Texture2D" uid="uid://ddgebc2ftt1lu" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/7.png" id="12_0xord"]
[ext_resource type="Texture2D" uid="uid://cggwtcnooiil" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/8.png" id="13_mbu6m"]
[ext_resource type="Texture2D" uid="uid://c8d6xiiwtfugr" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/9.png" id="14_ps2h6"]
[ext_resource type="Texture2D" uid="uid://bvpafhjj47p28" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/10.png" id="15_mrcmw"]
[ext_resource type="Texture2D" uid="uid://qsv8m3xeasft" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/11.png" id="16_mvdma"]
[ext_resource type="Texture2D" uid="uid://doxidu47132ww" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/12.png" id="17_xggl7"]
[ext_resource type="Texture2D" uid="uid://bqmfh34vihugl" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/13.png" id="18_s6c5f"]
[ext_resource type="Texture2D" uid="uid://c1ncyvxfdyudl" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/LEFT/14.png" id="19_i2umv"]
[ext_resource type="Texture2D" uid="uid://d22n3pmkykb1u" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/1.png" id="20_4v4ek"]
[ext_resource type="Texture2D" uid="uid://dn8xywwqlmbqj" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/3.png" id="21_22v88"]
[ext_resource type="Texture2D" uid="uid://dud668jssxom7" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/4.png" id="22_pw5nb"]
[ext_resource type="Texture2D" uid="uid://d4nmlqmqs34jw" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/5.png" id="23_0kj7c"]
[ext_resource type="Texture2D" uid="uid://b3p8etij41uv6" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/6.png" id="24_k807h"]
[ext_resource type="Texture2D" uid="uid://blaq1vo6v5oxt" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/7.png" id="25_feymk"]
[ext_resource type="Texture2D" uid="uid://bfu73qhlpww6f" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/8.png" id="26_05a8c"]
[ext_resource type="Texture2D" uid="uid://bsrjy62u07r4d" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/9.png" id="27_bg80u"]
[ext_resource type="Texture2D" uid="uid://dg0rw6uqbs4h5" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/10.png" id="28_kape3"]
[ext_resource type="Texture2D" uid="uid://c2aajyip2gtjj" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/11.png" id="29_63iea"]
[ext_resource type="Texture2D" uid="uid://ddr2wpm2mgtwq" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/12.png" id="30_lwwpw"]
[ext_resource type="Texture2D" uid="uid://dx5u1woy8pchh" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/13.png" id="31_7t336"]
[ext_resource type="Texture2D" uid="uid://bh6oxd1ad67gj" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/DOORS/RIGHT/14.png" id="32_26jxh"]
[ext_resource type="Texture2D" uid="uid://cnnbda7fvnwgs" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/OTHER/USAGE_BAR/1.png" id="35_g7ax1"]
[ext_resource type="Texture2D" uid="uid://pm4moly265jp" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/OTHER/USAGE_BAR/2.png" id="36_at5yy"]
[ext_resource type="Texture2D" uid="uid://c2p0wc7on6dxw" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/OTHER/USAGE_BAR/3.png" id="37_xtr68"]
[ext_resource type="PackedScene" uid="uid://dr7oow4xcfd7" path="res://control_anim.tscn" id="38_b4cdc"]
[ext_resource type="Texture2D" uid="uid://cljbug2acb2qb" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/OTHER/USAGE_BAR/4.png" id="38_ij56l"]
[ext_resource type="Texture2D" uid="uid://cf52m4xu7fj3k" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/3-THE_OFFICE/OTHER/USAGE_BAR/5.png" id="39_1lgmn"]
[ext_resource type="PackedScene" uid="uid://b2ms1a0l72pe2" path="res://mapa.tscn" id="39_qsqfv"]
[ext_resource type="PackedScene" uid="uid://4r0occ2i3qgs" path="res://monitor.tscn" id="40_lr0h7"]
[ext_resource type="Texture2D" uid="uid://5mknn22o7xw3" path="res://FNAF ASSETS REORGANIZED BY ENTEREST/6-CAMERAS/0-FLIP.png" id="49_4fuqt"]
[ext_resource type="Script" path="res://btn_camara.gd" id="50_c4l4f"]

[sub_resource type="SpriteFrames" id="SpriteFrames_sywnt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_s34tl")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8fe2"]
size = Vector2(547.5, 644)

[sub_resource type="SpriteFrames" id="SpriteFrames_8k6bl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_eos2g")
}, {
"duration": 1.0,
"texture": ExtResource("4_3cgyo")
}, {
"duration": 1.0,
"texture": ExtResource("5_tk1mf")
}],
"loop": true,
"name": &"default",
"speed": 100.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2cuns"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_3sg0f")
}, {
"duration": 1.0,
"texture": ExtResource("7_4ta5s")
}, {
"duration": 1.0,
"texture": ExtResource("8_qoxal")
}, {
"duration": 1.0,
"texture": ExtResource("9_yl5dj")
}, {
"duration": 1.0,
"texture": ExtResource("10_mq7fp")
}, {
"duration": 1.0,
"texture": ExtResource("11_hbmah")
}, {
"duration": 1.0,
"texture": ExtResource("12_0xord")
}, {
"duration": 1.0,
"texture": ExtResource("13_mbu6m")
}, {
"duration": 1.0,
"texture": ExtResource("14_ps2h6")
}, {
"duration": 1.0,
"texture": ExtResource("15_mrcmw")
}, {
"duration": 1.0,
"texture": ExtResource("16_mvdma")
}, {
"duration": 1.0,
"texture": ExtResource("17_xggl7")
}, {
"duration": 1.0,
"texture": ExtResource("18_s6c5f")
}, {
"duration": 1.0,
"texture": ExtResource("19_i2umv")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_avmgk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_4v4ek")
}, {
"duration": 1.0,
"texture": ExtResource("21_22v88")
}, {
"duration": 1.0,
"texture": ExtResource("22_pw5nb")
}, {
"duration": 1.0,
"texture": ExtResource("23_0kj7c")
}, {
"duration": 1.0,
"texture": ExtResource("24_k807h")
}, {
"duration": 1.0,
"texture": ExtResource("25_feymk")
}, {
"duration": 1.0,
"texture": ExtResource("26_05a8c")
}, {
"duration": 1.0,
"texture": ExtResource("27_bg80u")
}, {
"duration": 1.0,
"texture": ExtResource("28_kape3")
}, {
"duration": 1.0,
"texture": ExtResource("29_63iea")
}, {
"duration": 1.0,
"texture": ExtResource("30_lwwpw")
}, {
"duration": 1.0,
"texture": ExtResource("31_7t336")
}, {
"duration": 1.0,
"texture": ExtResource("32_26jxh")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_6xgmc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"apagado",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"encender",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_k51n6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_1lgmn")
}, {
"duration": 1.0,
"texture": ExtResource("38_ij56l")
}, {
"duration": 1.0,
"texture": ExtResource("37_xtr68")
}, {
"duration": 1.0,
"texture": ExtResource("36_at5yy")
}, {
"duration": 1.0,
"texture": ExtResource("35_g7ax1")
}],
"loop": false,
"name": &"bajar",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_g7ax1")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_g7ax1")
}, {
"duration": 1.0,
"texture": ExtResource("36_at5yy")
}, {
"duration": 1.0,
"texture": ExtResource("37_xtr68")
}, {
"duration": 1.0,
"texture": ExtResource("38_ij56l")
}, {
"duration": 1.0,
"texture": ExtResource("39_1lgmn")
}],
"loop": false,
"name": &"subir",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_568pg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"apagado",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"encender",
"speed": 5.0
}]

[node name="Oficina" type="Node2D"]
script = ExtResource("1_gv6nb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.49999, -6.87495)
scale = Vector2(0.899375, 0.925347)
sprite_frames = SubResource("SpriteFrames_sywnt")
animation = &"new_animation"
autoplay = "new_animation"

[node name="Camera" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Camera"]

[node name="Detectores" type="Node2D" parent="."]
position = Vector2(-102, 3)

[node name="Izq" type="Area2D" parent="Detectores"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectores/Izq"]
position = Vector2(-314, 1)
shape = SubResource("RectangleShape2D_h8fe2")

[node name="Der" type="Area2D" parent="Detectores"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectores/Der"]
position = Vector2(520, 0)
shape = SubResource("RectangleShape2D_h8fe2")

[node name="Ventilador" type="Node2D" parent="."]
position = Vector2(-1.49999, -6.87495)
scale = Vector2(0.899375, 0.925347)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Ventilador"]
position = Vector2(48.3669, 40.9305)
sprite_frames = SubResource("SpriteFrames_8k6bl")
autoplay = "default"

[node name="Puertas" type="Node2D" parent="."]
position = Vector2(42, 31)
scale = Vector2(0.899375, 0.925347)

[node name="Izq" type="Node2D" parent="Puertas"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Puertas/Izq"]
position = Vector2(-670.065, -47.0094)
scale = Vector2(1.02353, 1.00713)
sprite_frames = SubResource("SpriteFrames_2cuns")
autoplay = "default"

[node name="Der" type="Node2D" parent="Puertas"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Puertas/Der"]
position = Vector2(539.263, -48.9883)
scale = Vector2(1, 1.02907)
sprite_frames = SubResource("SpriteFrames_avmgk")
autoplay = "default"

[node name="Botones" type="Node2D" parent="."]
position = Vector2(527, -14.3312)
scale = Vector2(0.899375, 0.952243)

[node name="Der" type="Node2D" parent="Botones"]

[node name="botonder" type="Button" parent="Botones/Der"]
offset_left = 96.7339
offset_top = -7.00328
offset_right = 118.734
offset_bottom = 26.9967

[node name="btnder" type="AnimatedSprite2D" parent="Botones/Der"]
position = Vector2(108.965, 40.2536)
scale = Vector2(0.645028, 0.687072)
sprite_frames = SubResource("SpriteFrames_6xgmc")
animation = &"apagado"

[node name="Barra electricidad" type="Node2D" parent="Botones/Der"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Botones/Der/Barra electricidad"]
position = Vector2(107.853, -13.3042)
rotation = -0.120428
scale = Vector2(0.262636, 0.25)
sprite_frames = SubResource("SpriteFrames_k51n6")
animation = &"subir"
autoplay = "subir"

[node name="Izq" type="Node2D" parent="Botones"]

[node name="botonizq" type="Button" parent="Botones/Izq"]
offset_left = -1330.0
offset_top = -14.0
offset_right = -1303.0
offset_bottom = 26.0

[node name="btnizq" type="AnimatedSprite2D" parent="Botones/Izq"]
position = Vector2(-1318.69, 36.053)
scale = Vector2(0.62466, 0.70705)
sprite_frames = SubResource("SpriteFrames_568pg")
animation = &"encender"

[node name="Camara" type="Node2D" parent="."]
visible = false

[node name="ControlAnim" parent="Camara" instance=ExtResource("38_b4cdc")]
visible = false

[node name="monitor" parent="Camara" instance=ExtResource("40_lr0h7")]
visible = false

[node name="Mapa" parent="Camara" instance=ExtResource("39_qsqfv")]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="BtnCamara" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -0.255
anchor_top = 0.338
anchor_right = 0.273
anchor_bottom = 0.443
offset_left = 453.76
offset_top = 180.976
offset_right = 453.504
offset_bottom = 180.936
icon = ExtResource("49_4fuqt")
script = ExtResource("50_c4l4f")

[connection signal="mouse_entered" from="Detectores/Izq" to="." method="_on_izq_mouse_entered"]
[connection signal="mouse_exited" from="Detectores/Izq" to="." method="_on_izq_mouse_exited"]
[connection signal="mouse_entered" from="Detectores/Der" to="." method="_on_der_mouse_entered"]
[connection signal="mouse_exited" from="Detectores/Der" to="." method="_on_der_mouse_exited"]
[connection signal="animation_finished" from="Puertas/Der/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="pressed" from="Botones/Der/botonder" to="." method="_on_botonder_pressed"]
[connection signal="tree_entered" from="Botones/Der/btnder" to="." method="_on_btnder_tree_entered"]
[connection signal="animation_finished" from="Botones/Der/Barra electricidad/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="pressed" from="Botones/Izq/botonizq" to="." method="_on_botonizq_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/BtnCamara" to="." method="_on_btn_camara_mouse_entered"]
